# luxoft-test-assignment

./: .gitignore  README.md  pyproject.toml  run_tests.py
luxoft_test_assingment/: argparser.py  utils.py
luxoft_test_assingment/blender_scripts/: create_a_figure.py  create_material_figure.py
luxoft_test_assingment/blender_scripts/scripts_utils/: utils.py
