[tool.poetry]
name = "luxoft-test-assingment"
version = "0.1.0"
description = ""
authors = ["Pavel Sergeev <pavel.al.sergeev@gmail.com>"]
readme = "README.md"
packages = [{include = "luxoft_test_assingment"}]

[tool.poetry.dependencies]
python = "3.10.10"
bpy = "^3.4.0"
psutil = "^5.9.4"

[tool.poetry.group.dev.dependencies]
flake8 = "<6.0.0"   
isort = "^5.12.0"
pep8-naming = "^0.13.3"
flake8-return = "^1.2.0"
flake8-broken-line = "^0.6.0"
fake-bpy-module-latest = "^20230302"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
